<resources>
    <string name="app_name">EBrand</string>
    <string name="Teacher_remit">名师汇</string>
    <string name="search">搜索</string>
    <string name="Famous_brand_remit">名品汇</string>
    <string name="Activities">活动</string>
    <string name="bidding">招投标</string>
    <string name="hot">热门</string>
    <string name="collected">收藏</string>
    <string name="personnal">个人中心</string>
    <string name="more">更多</string>
    <string name="string_record_too_short">录音时间太短</string>
    <string name="string_upload_picture">上传照片</string>
    <string name="string_login">登录</string>
    <string name="string_register">注册</string>
    <string name="string_exit_program_hint">是否退出程序？</string>
    <string name="exit_program_hint">再次点击返回键，可退出程序</string>
    <string name="string_hint">提示</string>
    <string name="string_confirm">确定</string>
    <string name="string_cancel">取消</string>
    <string name="string_submit">提交</string>
    <string name="string_save">保存</string>
    <string name="string_search">搜索</string>
    <string name="string_back">返回</string>
    <string name="string_select">选择</string>
    <string name="string_yes">是</string>
    <string name="string_no">否</string>
    <string name="getting_location">正在获取经纬度...</string>
    <string name="cannot_get_location">无法获取经纬度</string>
    <string name="location_north">北纬 %s</string>
    <string name="location_south">南纬 %sS</string>
    <string name="location_east">东经 %s</string>
    <string name="location_west">西经 %s</string>
    <string name="setcolor">更换颜色</string>
    <string name="setbright">更换亮度</string>
    <string name="register">注册</string>
    <string name="username">用户名：</string>
    <string name="password">密 码：</string>
    <string name="register_remeber">记住用户名和密码</string>
    <string name="login">登陆</string>
    <string name="register_content">服务条款 3) 不得发表损害国家荣誉和利益的，破坏国家宗教政策，宣扬邪教和封建迷信的； 4) 不得发表煽动民族仇恨、民族歧视，破坏民族团结的； 5) 不得发表捏造或者歪曲事实，散布谣言，扰乱社会秩序，破坏社会稳定的； 6) 不得发表侮辱他人或者捏造事实诽谤他人的，侵害他人合法权益的； 7) 不得发表任何含有威胁、恐吓、漫骂、不雅、庸俗、亵渎、色情、淫秽、赌博、暴力、凶杀、非法、反动、前后矛盾、攻击性、伤害性、骚扰性、诽谤性、辱骂性的或侵害他人知识产权的文字或图片； 8) 不得发表可能导致任何计算机软硬件或通讯设备的功能中断、被破坏、被限制的含有计算机病毒或其他计算机密码的文字；</string>
    <string name="login_agree">我已经阅读服务条款并同意注册</string>
    <string name="dynamin_send_message">发 表</string>
    <string name="dynamin_location">位置</string>
    <string name="dynamin_camera">照相</string>
    <string name="dynamin_expreesion">表情</string>
    <string name="dynamin_voice">语音</string>
    <string name="dynamin_restore">回复</string>
    <string name="activity_edit">编辑</string>
    <string name="chat_room">聊天室</string>
    <string name="join_person">参与人</string>
    <string name="i_jion">我要参加</string>
    <string name="sign_in">我要签到</string>
    <string name="invite_friend">邀请朋友</string>
    <string name="i_jion_activity">我参与的活动</string>
    <string name="in_activity">进行中的活动</string>
    <string name="i_hold_activity">我发起的活动</string>
    <string name="hold_activity">发起活动</string>
    <string name="acttention">关 注</string>
    <string name="fans">粉 丝</string>
    <string name="visiter">访 客</string>
    <string name="near_friend">附近朋友</string>
    <string name="fc_person">风云人物</string>
    <string name="my_step">我的足迹</string>
    <string name="message">留言</string>
    <string name="more_account_manager">用户管理</string>
    <string name="more_account_change">切换用户</string>
    <string name="more_weibo">微博绑定</string>
    <string name="more_gps">GPS设置</string>
    <string name="more_screct">隐私设置</string>
    <string name="more_change_title">更换主题</string>
    <string name="more_share">分 享</string>
    <string name="more_goverment_weibo">官方博客</string>
    <string name="more_opinion_reference">意见反馈</string>
    <string name="more_about">关 于</string>
    <string name="more_change_user">更换用户</string>
    <string name="more_comment">评论</string>
    <string name="more_start_gps">启动GPS</string>
    <string name="more_title_setting">主题设置</string>
    <string name="more_title_more">根据天气自动变换主题</string>
    <string name="more_account">账号</string>
    <string name="more_password">密码</string>
    <string name="more_weibo_lock">绑定</string>
    <string name="more_submit">提交</string>
    <string name="more_company_info">本产品由首季风科技提供技术支持</string>
    <string name="more_location_open">位置开放</string>
    <string name="more_photo_open">相片开放</string>
    <string name="more_uses">使用</string>
    <string name="more_weather">睛天</string>
    <string name="more_weather_content">晴天焰光明媚</string>
    <string name="tools_emeergency_title">编写求救公告</string>
    <string name="tools_ordinary">普通</string>
    <string name="tools_emergency_to">紧急程度 :</string>
    <string name="tools_emergency">紧急</string>
    <string name="tools_veryemergency">十万火急</string>
    <string name="tools_name">姓名 :</string>
    <string name="tools_phonenumber">电话 :</string>
    <string name="tools_time">时间 :</string>
    <string name="tools_context">内容 :</string>
    <string name="tools_gps">位置 :</string>
    <string name="tools_sure">确定</string>
    <string name="dialog_title_what_to_draw">选择所要绘制的图形</string>
    <string name="tip_current_is_drawing">当前正在绘制：</string>
    <string name="dialog_input_text">请输入文字</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="about_shortcut_info"><b>快捷键功能：</b></string>
    <string name="about_shortcut_up"><b>向上键</b> - 打开图形对话框，选择所要绘制的图形。</string>
    <string name="about_shortcut__down"><b>向下键</b> - 清除已绘制的图形，得到一张新的画布。</string>
    <string name="about_shortcut_center"><b>中间键</b> - 保存图画</string>
    <string name="about_contact_author"><b>联系作者:</b></string>
    <string name="about_msg_by_author" />
    <string name="pen_title">画笔</string>
    <string name="pen_key">pen_key</string>
    <string name="pen_summary">设置画笔</string>
    <string name="pen_width_title">宽度</string>
    <string name="pen_width_key">pen_width_key</string>
    <string name="pen_width_summary">设置画笔宽度</string>
    <string name="pen_color_title">颜色</string>
    <string name="pen_color_key">pen_color_key</string>
    <string name="pen_color_summary">设置画笔颜色</string>
    <string name="checkbox_default_true">true</string>
    <string name="checkbox_default_false">false</string>
    <string name="pen_style_title">风格</string>
    <string name="pen_style_key">pen_style_key</string>
    <string name="pen_style_summary_on">绘制图形时填充内部</string>
    <string name="pen_style_summary_off">绘制图形时不填充内部</string>
    <string name="canvas_title">画布</string>
    <string name="canvas_key">canvas_key</string>
    <string name="canvas_summary">设置画布</string>
    <string name="canvas_bgcolor_title">背景</string>
    <string name="canvas_bgcolor_key">canvas_bgcolor_key</string>
    <string name="canvas_bgcolor_summary">设置画布背景颜色</string>
    <string name="setting_screen_key">setting_screen_key</string>
    <string name="setting_screen_title">屏幕</string>
    <string name="setting_screen_summary">屏幕设置</string>
    <string name="check_full_screen_key">check_full_screen</string>
    <string name="full_screen_title">全屏</string>
    <string name="full_screen_on">下次启动时全屏显示</string>
    <string name="full_screen_off">下次启动时不全屏显示</string>
    <string name="menu_title_setting">设置</string>
    <string name="menu_title_save">保存</string>
    <string name="menu_title_clear_screen">清屏</string>
    <string name="menu_title_what_to_draw">画笔形状</string>
    <string name="menu_title_quit">退出</string>
    <string name="menu_title_about">关于</string>
    <string name="tip_sdcard_is_read_only">无法保存， sd卡不可写入</string>
    <string name="tip_sdcard_is_not_available">无法保存， 未检测到sd卡</string>
    <string name="tip_save_to">存储至:</string>
    <string name="tip_sava_failed">保存失败</string>
    <string name="tip_choose_color">点选颜色</string>
    <string name="tip_touch_to_draw">触动屏幕，开始绘图</string>
    <string name="signconfirmclue">请先进行信息核对，确认无误后再签到。</string>
    <string name="aboutme" />
    <string name="softwareversionnumber">版本号：SW_V3.0.4.0307</string>
    <string name="softwareversion">SW_V3.0.4.0307</string>
    <string name="input_name_hint">请输入名字……</string>
    <string name="input_job_hit">请输入职位……</string>
    <string name="input_company_hint">请输入单位名称……</string>
</resources>
