<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/mainbackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/view_usernamebmp_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <com.meeting.application.set.UsernameLayout android:id="@+id/username_layout" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="800.0dip" android:layout_height="480.0dip" />
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <Button android:id="@+id/btn_initPos" android:background="@drawable/btn_initpos" android:layout_width="200.0dip" android:layout_height="wrap_content" />
                <Button android:id="@+id/btn_purecolor" android:background="@drawable/btn_purebackground" android:layout_width="200.0dip" android:layout_height="wrap_content" />
                <Button android:id="@+id/btn_bitmapbackground" android:background="@drawable/btn_otherbackground" android:layout_width="200.0dip" android:layout_height="wrap_content" />
                <Button android:id="@+id/btn_modify_confirm" android:background="@drawable/btn_modify" android:layout_width="200.0dip" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:orientation="horizontal" android:id="@+id/backgroundgallary_layout" android:background="#aa000000" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true">
            <Gallery android:layout_gravity="center_vertical" android:id="@+id/gallery_bitmapbackground" android:background="#00000000" android:fadingEdgeLength="-5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:spacing="16.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/view_namesetting" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@+id/imageView1" android:background="@drawable/namesetting_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_centerHorizontal="true" />
        <LinearLayout android:id="@+id/detials" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="140.0dip" android:layout_centerHorizontal="true">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent">
                <ImageView android:id="@+id/imageView2" android:background="@drawable/name_title" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <ImageView android:id="@+id/imageView3" android:background="@drawable/company_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" />
                <ImageView android:id="@+id/imageView4" android:background="@drawable/job_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <EditText android:id="@+id/edtext_username" android:background="@drawable/editbox_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="200.0dip" android:layout_height="wrap_content" android:hint="@string/input_name_hint" android:maxLines="1" android:lines="1" android:singleLine="true" />
                <EditText android:id="@+id/edtext_company" android:background="@drawable/editbox_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="@string/input_company_hint" android:maxLines="1" android:lines="1" android:singleLine="true" />
                <EditText android:id="@+id/edtext_job" android:background="@drawable/editbox_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="@string/input_job_hit" android:maxLines="1" android:lines="1" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="170.0dip" android:layout_height="fill_parent">
                <Spinner android:id="@+id/name_font_select" android:background="@drawable/sniper_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" />
                <Spinner android:id="@+id/company_font_select" android:background="@drawable/sniper_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" />
                <Spinner android:id="@+id/job_font_select" android:background="@drawable/sniper_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="90.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip">
                <ImageView android:id="@+id/name_color" android:background="@color/yellow" android:layout_width="100.0dip" android:layout_height="55.0dip" />
                <ImageView android:id="@+id/company_color" android:background="@color/yellow" android:layout_width="100.0dip" android:layout_height="55.0dip" android:layout_marginTop="30.0dip" />
                <ImageView android:id="@+id/job_color" android:background="@color/yellow" android:layout_width="100.0dip" android:layout_height="55.0dip" android:layout_marginTop="25.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip">
                <EditText android:id="@+id/edtext_namesize" android:background="@drawable/editbox_bg1" android:paddingLeft="10.0dip" android:layout_width="70.0dip" android:layout_height="wrap_content" android:hint="20" android:singleLine="true" android:inputType="number" />
                <EditText android:id="@+id/edtext_companysize" android:background="@drawable/editbox_bg1" android:paddingLeft="10.0dip" android:layout_width="70.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="6" android:singleLine="true" android:inputType="number" />
                <EditText android:id="@+id/edtext_jobsize" android:background="@drawable/editbox_bg1" android:paddingLeft="10.0dip" android:layout_width="70.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="6" android:singleLine="true" android:inputType="number" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip">
                <CheckBox android:id="@+id/btn_namebold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="粗体" style="@style/MyCheckBox1" />
                <CheckBox android:id="@+id/btn_companybold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="粗体" style="@style/MyCheckBox1" />
                <CheckBox android:id="@+id/btn_jobbold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="粗体" style="@style/MyCheckBox1" />
            </LinearLayout>
        </LinearLayout>
        <Button android:textSize="20.0dip" android:id="@+id/btn_pagesetting" android:background="@drawable/btn_pagesetting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_below="@id/detials" android:layout_centerHorizontal="true" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_alignParentBottom="true">
            <include android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" layout="@layout/regulation_modi" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>